[jps build] cleanup: simplify code using new Java API
GitOrigin-RevId: ffc2836da50cb52b5d401a9360d96720b766c77b